--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="bar_grey">#393a3e</color>
 
+    <color name="main_color">#5A8DDF</color>
+
 </resources>
