--- a/app/src/main/res/layout/bedactivity.xml
+++ b/app/src/main/res/layout/bedactivity.xml
@@ -20,74 +20,25 @@
             android:layout_height="23dp" />
 
         <TextView
+            android:id="@+id/bed_title"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="重点人员"
+            android:text=""
             android:textColor="#ffffffff"
             android:textSize="20sp"
             />
 
+        <ImageView
+            android:layout_marginRight="13dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/shedu_icon6"
+            android:layout_width="17dp"
+            android:layout_height="23dp" />
+
     </RelativeLayout>
-
-    <RadioGroup
-            android:layout_marginTop="14dp"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-
-            <RadioButton
-                android:textColor="@drawable/keyper_tab_txtcolor"
-                android:id="@+id/keyper_rab1"
-                android:background="@drawable/keyper_tab_icon1"
-                android:checked="false"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:button="@null"
-                android:text="领导交办重点人筛选"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-            <View
-                android:layout_width="10dp"
-                android:layout_height="match_parent"/>
-            <RadioButton
-                android:textSize="14sp"
-
-                android:textColor="@drawable/keyper_tab_txtcolor"
-                android:background="@drawable/keyper_tab_icon1"
-                android:id="@+id/keyper_rab2"
-                android:checked="true"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:button="@null"
-                android:text="重点人异地居住一年以上"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-            <View
-                android:layout_width="10dp"
-                android:layout_height="match_parent"/>
-            <RadioButton
-                android:textSize="14sp"
-
-                android:textColor="@drawable/keyper_tab_txtcolor"
-                android:background="@drawable/keyper_tab_icon1"
-                android:id="@+id/keyper_rab3"
-                android:checked="false"
-                android:gravity="center"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:button="@null"
-                android:text="失控离开本地重点人"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
-
-
-        </RadioGroup>
-
     <LinearLayout
         android:layout_marginRight="13dp"
         android:orientation="horizontal"
@@ -128,7 +79,6 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
-    
     <RelativeLayout
         android:layout_marginRight="13dp"
         android:layout_marginLeft="13dp"
@@ -138,17 +88,17 @@
 
         <Spinner
             android:background="@drawable/keyper_spinner_drop_down_shape"
-            android:id="@+id/sp1"
+            android:id="@+id/sd_sp1"
             android:layout_width="170dp"
             android:layout_height="match_parent">
 
         </Spinner>
 
         <Spinner
-            android:layout_toRightOf="@+id/sp1"
+            android:layout_toRightOf="@+id/sd_sp1"
             android:layout_marginLeft="10dp"
             android:background="@drawable/keyper_spinner_drop_down_shape"
-            android:id="@+id/sp2"
+            android:id="@+id/sd_sp2"
             android:layout_width="170dp"
             android:layout_height="match_parent">
 
@@ -162,7 +112,7 @@
             android:paddingLeft="8dp"
             android:background="@drawable/keyper_textbg"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/sp2"
+            android:layout_toRightOf="@+id/sd_sp2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="查询"
@@ -182,13 +132,16 @@
 
 
     </RelativeLayout>
-
     <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
         android:layout_marginRight="13dp"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="14dp"
-        android:id="@+id/one_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/sd_listview">
+
+
     </com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView>
+
+
 </LinearLayout>
