--- a/app/src/main/res/layout/bedrugrelated_fragment.xml
+++ b/app/src/main/res/layout/bedrugrelated_fragment.xml
@@ -18,7 +18,7 @@
             android:id="@+id/home_img1"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/home_icon2"
+            android:src="@mipmap/shedu_icon1"
             android:layout_width="25dp"
             android:layout_height="25dp" />
 
@@ -29,7 +29,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="应当列管未列管"
+            android:text="一次涉毒案件"
             android:textColor="#ff1f1f1f"
             android:textSize="17sp"
             />
@@ -57,7 +57,7 @@
             android:id="@+id/home_img2"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/home_icon4"
+            android:src="@mipmap/shedu_icon2"
             android:layout_width="25dp"
             android:layout_height="25dp" />
 
@@ -68,7 +68,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="应当撤管未撤管"
+            android:text="二次涉毒案件"
             android:textColor="#ff1f1f1f"
             android:textSize="17sp"
             />
@@ -97,7 +97,7 @@
             android:id="@+id/home_img3"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/home_icon5"
+            android:src="@mipmap/shedu_icon3"
             android:layout_width="25dp"
             android:layout_height="25dp" />
 
@@ -108,7 +108,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="羁押期间或已死亡仍有列管记录"
+            android:text="三次涉毒案件"
             android:textColor="#ff1f1f1f"
             android:textSize="17sp"
             />
@@ -137,7 +137,7 @@
             android:id="@+id/home_img4"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/home_icon6"
+            android:src="@mipmap/shedu_icon4"
             android:layout_width="25dp"
             android:layout_height="25dp" />
 
@@ -148,7 +148,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="重点关注人员失控离开本地"
+            android:text="多次涉毒案件"
             android:textColor="#ff1f1f1f"
             android:textSize="17sp"
             />
@@ -176,7 +176,7 @@
             android:id="@+id/home_img5"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/home_icon7"
+            android:src="@mipmap/shedu_icon5"
             android:layout_width="25dp"
             android:layout_height="25dp" />
 
@@ -187,7 +187,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="未按照规定录入稳控考察记录"
+            android:text="涉毒人员驾驶证未注销"
             android:textColor="#ff1f1f1f"
             android:textSize="17sp"
             />
