--- a/app/src/main/res/layout/bedactivity_list_item.xml
+++ b/app/src/main/res/layout/bedactivity_list_item.xml
@@ -151,7 +151,7 @@
                 android:paddingTop="5dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="5dp"
-                android:text="审批"
+                android:text="反馈"
                 android:textColor="#FFFFFF" />
 
 
