--- a/app/src/main/res/layout/bedactivitydetails.xml
+++ b/app/src/main/res/layout/bedactivitydetails.xml
@@ -10,12 +10,19 @@
         android:layout_height="40dp"
         android:background="#1E387F">
 
-        <ImageView
-            android:layout_width="17dp"
-            android:layout_height="23dp"
+        <RelativeLayout
+            android:id="@+id/back"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="13dp"
-            android:src="@mipmap/home_icon1" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@mipmap/home_icon1"
+                android:layout_width="17dp"
+                android:layout_height="23dp" />
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
