--- a/app/src/main/res/layout/keypersonnelactivity.xml
+++ b/app/src/main/res/layout/keypersonnelactivity.xml
@@ -12,12 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="40dp">
 
-        <ImageView
-            android:layout_marginLeft="13dp"
+        <RelativeLayout
+            android:id="@+id/back"
+            android:padding="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
-            android:src="@mipmap/home_icon1"
-            android:layout_width="17dp"
-            android:layout_height="23dp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@mipmap/home_icon1"
+                android:layout_width="17dp"
+                android:layout_height="23dp" />
+
+        </RelativeLayout>
 
         <TextView
             android:layout_centerHorizontal="true"
@@ -32,6 +39,7 @@
     </RelativeLayout>
 
     <RadioGroup
+        android:id="@+id/key_group"
             android:layout_marginTop="14dp"
             android:layout_gravity="center"
             android:orientation="horizontal"
@@ -42,7 +50,7 @@
                 android:textColor="@drawable/keyper_tab_txtcolor"
                 android:id="@+id/keyper_rab1"
                 android:background="@drawable/keyper_tab_icon1"
-                android:checked="false"
+                android:checked="true"
                 android:gravity="center"
                 android:textSize="14sp"
                 android:layout_marginLeft="10dp"
@@ -56,11 +64,10 @@
                 android:layout_height="match_parent"/>
             <RadioButton
                 android:textSize="14sp"
-
                 android:textColor="@drawable/keyper_tab_txtcolor"
                 android:background="@drawable/keyper_tab_icon1"
                 android:id="@+id/keyper_rab2"
-                android:checked="true"
+                android:checked="false"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:button="@null"
@@ -88,107 +95,13 @@
 
         </RadioGroup>
 
-    <LinearLayout
-        android:layout_marginRight="13dp"
-        android:orientation="horizontal"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="24dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-
-        <TextView
-            android:layout_weight="0.5"
-            android:gravity="center"
-            android:background="#ff2e59ce"
-            android:textColor="#ffffffff"
-            android:textSize="12sp"
-            android:text="全部数据"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-
-        <EditText
-            android:layout_weight="0.8"
-            android:paddingLeft="5dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/keyper_editbg"
-            android:textSize="9sp"
-            android:hint="请输入姓名"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-
-        <EditText
-            android:inputType="number|numberDecimal"
-            android:layout_weight="1"
-            android:paddingLeft="5dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/keyper_editbg"
-            android:textSize="9sp"
-            android:hint="请输入身份证号"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-    
-    <RelativeLayout
-        android:layout_marginRight="13dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="40dp">
-
-        <Spinner
-            android:background="@drawable/keyper_spinner_drop_down_shape"
-            android:id="@+id/sp1"
-            android:layout_width="170dp"
-            android:layout_height="match_parent">
-
-        </Spinner>
-
-        <Spinner
-            android:layout_toRightOf="@+id/sp1"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/keyper_spinner_drop_down_shape"
-            android:id="@+id/sp2"
-            android:layout_width="170dp"
-            android:layout_height="match_parent">
-
-        </Spinner>
-
-        <TextView
-            android:layout_marginLeft="8dp"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
-            android:paddingRight="8dp"
-            android:paddingLeft="8dp"
-            android:background="@drawable/keyper_textbg"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/sp2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="查询"
-            android:textColor="#ffffffff"
-            android:textSize="10sp"
-            />
-
-        <TextView
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="查询数量：0条"
-            android:textColor="#ff2e59ce"
-            android:textSize="10sp"
-            />
-
-
-    </RelativeLayout>
-
-    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
-        android:layout_marginRight="13dp"
-        android:layout_marginLeft="13dp"
-        android:layout_marginTop="14dp"
-        android:id="@+id/one_listview"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/key_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView>
+
+
+    </androidx.viewpager.widget.ViewPager>
+
+
 </LinearLayout>
